--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ apply from: 'https://raw.githubusercontent.com/bb4/bb4-common/master/bb4.gradle'
 task runColorMixer(type: JavaExec, dependsOn: classes) {
     group = 'application'
     main = 'com.barrybecker4.colormixer.ColorMixer'
+    args = ["-locale", "JAPANESE"]
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = ["-ea"]
 }
 
 dependencies {
