More i18n. Add a test.

--- a/scala-source/com/barrybecker4/colormixer/message.properties
+++ b/scala-source/com/barrybecker4/colormixer/message.properties
@@ -1,5 +1,13 @@
 #
-# Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
+# Copyright by Barry G. Becker, 2020. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
 APP_TITLE = Color Mixer
+FIRST_COLOR = First color:
+FIRST_COLOR_TIP = Select the first color to mix (under/source)
+SECOND_COLOR = Second color:
+SECOND_COLOR_TIP = Select the second color to mix (over/dest)
+
+DEST_ATOP_SRC = Destination Atop Source
+DEST_ATOP_SRC_DESC = The part of the destination lying inside of the source is composited over the source and replaces the destination
+
