--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        // retrieve the shared gradle build scripts from here
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/"}
+    }
+    dependencies {
+        classpath 'com.barrybecker4:bb4-gradle:1.6-SNAPSHOT'
+    }
+}
+
 plugins {
     id "com.github.maiflai.scalatest" version "0.25" // needed to run scala tests
 }
@@ -9,7 +19,7 @@ ext {
     mainClass = 'com.barrybecker4.colormixer.ColorMixer'
 }
 
-apply from: 'https://raw.githubusercontent.com/bb4/bb4-common/master/bb4.gradle'
+apply from: project.buildscript.classLoader.getResource('bb4.gradle').toURI()
 
 task runColorMixer(type: JavaExec, dependsOn: classes) {
     group = 'application'
@@ -23,5 +33,4 @@ dependencies {
     compile 'com.barrybecker4:bb4-ui:1.6-SNAPSHOT'
 }
 
-// This allows publishing of this project library to Sonatype
-apply from: 'https://raw.githubusercontent.com/bb4/bb4-common/master/bb4-publish.gradle'
+apply from: project.buildscript.classLoader.getResource('bb4-publish.gradle').toURI()
